# bluetodo

./: .gitignore  Cargo.toml  README.md  build.rs
packaging/systemd/: bluetodo.env.example  bluetodo.service
scripts/: install-systemd.sh  package-release.sh
src/: server.rs
src/server/: paths.rs  secrets.rs  startup_backup.rs
