[package]
name = "bluetodo"
version = "0.8.4"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["form", "http1", "tokio", "multipart", "query"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "client"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "webpki-roots", "ring"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
portable-atomic = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
zip = "0.6"
